# pandoc-online

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  docker-compose.single.yml  docker-compose.yml  package.json  pnpm-lock.yaml  security.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
apps/web/: Dockerfile  next.config.ts  package.json  playwright.config.ts  tsconfig.tsbuildinfo
apps/web/e2e/: converter.spec.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/src/components/: Converter.tsx  Footer.tsx  LegalDocument.tsx  SeoBar.tsx  SeoNav.tsx  SourceEditor.tsx  TopBar.tsx
apps/web/src/content/: legal-sections.tsx
apps/web/src/data/: samples.ts
apps/web/src/lib/: api.test.ts  api.ts
apps/worker/: Dockerfile  pyproject.toml  requirements.txt
apps/worker/app/: __init__.py  config.py  main.py  models.py  pandoc_runner.py
apps/worker/app/data/csl/: apa.csl  chicago-author-date.csl  ieee.csl  nature.csl  vancouver.csl
apps/worker/app/data/templates/: article.tex  default.html
apps/worker/app/filters/: include-files.lua  pagebreak.lua  table-columns.lua
apps/worker/tests/: test_allowlist.py  test_assets_and_binary.py  test_convert_integration.py  test_format_matrix.py  test_health.py  test_inspect_assets.py  test_security.py
docs/: QC_REPORT.md
legal/: DISCLAIMER.md  PRIVACY.md  TERMS.md
samples/: README.md  article.tex  readme.md  references.bib  research-paper.md  thesis-chapter.md
scripts/: e2e_format_verify.py
(+8 files in other folders)
